welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: reassignment to val
	if (negative=true){
                    ^posNeg:8: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		if (a < 0 || b < 0 && negative=false)
                          ^posNeg:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if (a < 0 || b < 0 && negative=false)
                ^